--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "superagent": "^3.8.3",
+    "superagent-promise": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
