--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "redux-logger": "^3.0.6",
     "superagent": "^3.8.3",
     "superagent-promise": "^1.1.0"
   },
